# rdm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  NOTES.md  README.md  dbus_test.sh  launch_vm.sh  launch_xephyr.sh
data/: login1.xml  rdm-greeter.pam  rdm.dbus  rdm.service
docs/: architecture.md  main.md  other_dms.md  questions.md
libcommon/: Cargo.toml
libcommon/src/: error.rs  ipc.rs  lib.rs  util.rs
libgreeter/: Cargo.toml
libgreeter/src/: lib.rs
rdm/: Cargo.toml
rdm-greeter/: Cargo.toml
rdm-greeter/src/: constants.rs  main.rs  ui.rs
rdm/src/: bus.rs  constants.rs  displaymanager.rs  ipc.rs  login1.rs  main.rs  manager.rs  seat.rs  seatmanager.rs  server.rs  session.rs
scripts/: launch_vm.sh
src/: constants.rs  ipc.rs  log.rs  main.rs  manager.rs  server.rs  ui.rs
theme/: rdm.theme  ui.glade
