[package]

name = "rdm"
version = "0.0.1"
authors = ["Florian Wilkens <mrfloya_github@outlook.com>"]
description = "Simple Display Manager inspired by SLiM"
repository = "https://github.com/mrfloya/rdm"
readme = "README.md"
license = "MIT"

[profile.release]
debug-assertions = false
lto = true

[features]
debug = []

[dependencies]
log = "0.3.6"
env_logger = "0.3.4"
dbus = "0.3.4"
gdk = "0.5.0"
gdk-pixbuf = "0.1.0"
pam-auth = "0.3.0"
users = "0.5.1"

[dependencies.gtk]
version = "0.1.0"
features = ["v3_10"]
