[package]

name = "rdm"
version = "0.0.1"
authors = ["Florian Wilkens <mrfloya_github@outlook.com>"]
description = "Simple Display Manager inspired by SLiM"
repository = "https://github.com/mrfloya/rdm"
readme = "README.md"
license = "MIT"

[profile.release]
debug-assertions = false
lto = true

[features]
debug = []

[dependencies]
env_logger = "0.3.4"
log = "0.3.6"

dbus = "0.3.4"
gdk = "0.5.0"
gdk-pixbuf = "0.1.0"
gtk = { version = "0.1.0", features = [ "v3_10" ] }
pam-auth = "0.3.0"
rand = "0.3.14"
users = "0.5.1"
uuid = { version = "0.2.2", features = [ "v4" ] }
