[package]
name = "rdmcommon"
version = "0.0.1"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Common library for rdm"
repository = "https://github.com/1wilkens/rdm"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
slog = "2.4.1"
slog-term = "2.4.0"

bytes = "^1.0"
#byteorder = "1.1.0"
tokio = "^1.5"
tokio-util = { version = "^0.7", features = ["codec"]}
