[package]
name = "rdmgreeter"
version = "0.0.1"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Greeter library for rdm"
repository = "https://github.com/1wilkens/rdm"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
slog = "2.0"

futures = "^0.1"
tokio = { version = "^1.19" }
tokio-uds = "^0.2"

rdmcommon = { path = "../libcommon"}
