[package]
name = "rdmgreeter"
version = "0.0.1"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Greeter library for rdm"
repository = "https://github.com/1wilkens/rdm"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
slog = "2.0"

futures = "^0.3"
tokio = { version = "^1.20" }
tokio-util = { version = "^0.7", features = ["codec"]}

rdmcommon = { path = "../libcommon"}
