[package]
name = "rdm-greeter"
version = "0.0.1"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Default greeter for rdm"
repository = "https://github.com/1wilkens/rdm"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
slog = "2.0"
slog-async = "2.0"
slog-term = "2.0"

rdmcommon = { path = "../libcommon" }
rdmgreeter = { path = "../libgreeter" }

gdk = "^0.7.0"
gdk-pixbuf = "^0.3.0"
gtk = { version = "^0.3.0", features = [ "v3_10" ] }

