[package]
name = "rdm-greeter"
version = "0.0.1"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Default greeter for rdm"
repository = "https://github.com/1wilkens/rdm"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
slog = "2.0"
slog-async = "2.0"
slog-term = "2.0"

tokio = { version = "^1.15" }

rdmcommon = { path = "../libcommon" }
rdmgreeter = { path = "../libgreeter" }

gdk = "^0.15"
gdk-pixbuf = "^0.15"
gtk = { version = "^0.15" }

