[package]
name = "rdm"
version = "0.0.1"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Simple Display Manager inspired by SLiM"
repository = "https://github.com/1wilkens/rdm"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
rdmcommon = { path = "../libcommon"}

futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
tokio-uds = "0.1"
#tokio-uds-proto = "0.1"

slog = "2.0"
slog-async = "2.0"
slog-term = "2.0"
clap = "2.29"
rand = "0.3"
uuid = { version = "0.2", features = [ "v4" ] }

dbus = "^0.6"
pam = "^0.7"
libc = "^0.2"
users = "^0.8"
