[package]
name = "rdm"
version = "0.0.1"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Simple Display Manager inspired by SLiM"
repository = "https://github.com/1wilkens/rdm"
readme = "README.md"
license = "MIT"

edition = "2018"

[dependencies]
rdmcommon = { path = "../libcommon"}

futures = "^0.3"
tokio = { version = "^1.5", features = ["full"] }
tokio-util = { version = "^0.7", features = ["codec"]}

slog = "^2.0"
slog-async = "^2.0"
slog-term = "^2.0"
clap = "^2.29"
rand = "^0.8"
uuid = { version = "^1.1", features = ["v4"] }

dbus = "^0.9"
dbus-tokio = "^0.7"
pam = "^0.7"
libc = "^0.2"
users = "^0.8"
